Bug 31782 - Test build failure with recent GCC trunk (x86/tst-cpu-features-supports.c:69:3: error: parameter to builtin not valid: avx5124fmaps)
Summary: Test build failure with recent GCC trunk (x86/tst-cpu-features-supports.c:69:...
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: build (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: 2.40
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-21 18:04 UTC by Sam James
Modified: 2024-06-18 08:54 UTC (History)
5 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sam James 2024-05-21 18:04:46 UTC
This broke with a recent commit in GCC trunk:

commit e1a7e2c54d52d0ba374735e285b617af44841ace
Author: Haochen Jiang <haochen.jiang@intel.com>
Date:   Mon May 20 10:43:44 2024 +0800

    i386: Remove Xeon Phi ISA support

--

```
[...]
../sysdeps/x86/tst-cpu-features-supports.c: In function ‘do_test’:
../sysdeps/x86/tst-cpu-features-supports.c:69:3: error: parameter to builtin not valid: avx5124fmaps
   69 |   fails += CHECK_FEATURE_ACTIVE (avx5124fmaps, AVX512_4FMAPS);
      |   ^~~~~
../sysdeps/x86/tst-cpu-features-supports.c:70:3: error: parameter to builtin not valid: avx5124vnniw
   70 |   fails += CHECK_FEATURE_ACTIVE (avx5124vnniw, AVX512_4VNNIW);
      |   ^~~~~
../sysdeps/x86/tst-cpu-features-supports.c:95:3: error: parameter to builtin not valid: avx512er
   95 |   fails += CHECK_FEATURE_ACTIVE (avx512er, AVX512ER);
      |   ^~~~~
../sysdeps/x86/tst-cpu-features-supports.c:102:3: error: parameter to builtin not valid: avx512pf
  102 |   fails += CHECK_FEATURE_ACTIVE (avx512pf, AVX512PF);
      |   ^~~~~
../sysdeps/x86/tst-cpu-features-supports.c:151:3: error: parameter to builtin not valid: prefetchwt1
  151 |   fails += CHECK_FEATURE_ACTIVE (prefetchwt1, PREFETCHWT1);
      |   ^~~~~
```
Comment 1 Haochen Jiang 2024-05-22 02:13:59 UTC
Those options have been removed in GCC15. Suppose the corresponding test should also be removed in glibc.

Let me have a look how many tests are affected.
Comment 2 Sourceware Commits 2024-05-27 19:30:17 UTC
The master branch has been updated by Sunil Pandey <skpgkp2@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=1b713c9a5349ef3cd1a8ccf9de017c7865713c67

commit 1b713c9a5349ef3cd1a8ccf9de017c7865713c67
Author: Sunil K Pandey <skpgkp2@gmail.com>
Date:   Mon May 27 10:08:18 2024 -0700

    i386: Disable Intel Xeon Phi tests for GCC 15 and above (BZ 31782)
    
    This patch disables Intel Xeon Phi tests for GCC 15 and above.
    
    GCC 15 removed Intel Xeon Phi ISA support.
    commit e1a7e2c54d52d0ba374735e285b617af44841ace
    Author: Haochen Jiang <haochen.jiang@intel.com>
    Date:   Mon May 20 10:43:44 2024 +0800
    
        i386: Remove Xeon Phi ISA support
    
    Fixes BZ 31782.
    
    Reviewed-by: H.J. Lu <hjl.tools@gmail.com>
Comment 3 Sourceware Commits 2024-05-28 18:43:11 UTC
The release/2.39/master branch has been updated by Sunil Pandey <skpgkp2@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=c9d8534406ab69b9bc1fd3fdfb9e88c9580d3f24

commit c9d8534406ab69b9bc1fd3fdfb9e88c9580d3f24
Author: Sunil K Pandey <skpgkp2@gmail.com>
Date:   Mon May 27 10:08:18 2024 -0700

    i386: Disable Intel Xeon Phi tests for GCC 15 and above (BZ 31782)
    
    This patch disables Intel Xeon Phi tests for GCC 15 and above.
    
    GCC 15 removed Intel Xeon Phi ISA support.
    commit e1a7e2c54d52d0ba374735e285b617af44841ace
    Author: Haochen Jiang <haochen.jiang@intel.com>
    Date:   Mon May 20 10:43:44 2024 +0800
    
        i386: Remove Xeon Phi ISA support
    
    Fixes BZ 31782.
    
    Reviewed-by: H.J. Lu <hjl.tools@gmail.com>
    (cherry picked from commit 1b713c9a5349ef3cd1a8ccf9de017c7865713c67)
Comment 4 Sourceware Commits 2024-05-28 19:54:39 UTC
The release/2.38/master branch has been updated by Sunil Pandey <skpgkp2@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=697ab62d1176180bea49094130ad0af2b108874d

commit 697ab62d1176180bea49094130ad0af2b108874d
Author: Sunil K Pandey <skpgkp2@gmail.com>
Date:   Mon May 27 10:08:18 2024 -0700

    i386: Disable Intel Xeon Phi tests for GCC 15 and above (BZ 31782)
    
    This patch disables Intel Xeon Phi tests for GCC 15 and above.
    
    GCC 15 removed Intel Xeon Phi ISA support.
    commit e1a7e2c54d52d0ba374735e285b617af44841ace
    Author: Haochen Jiang <haochen.jiang@intel.com>
    Date:   Mon May 20 10:43:44 2024 +0800
    
        i386: Remove Xeon Phi ISA support
    
    Fixes BZ 31782.
    
    Reviewed-by: H.J. Lu <hjl.tools@gmail.com>
    (cherry picked from commit 1b713c9a5349ef3cd1a8ccf9de017c7865713c67)
Comment 5 Sam James 2024-06-18 08:54:15 UTC
.